# queryLog

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
doc/: Makefile.in  OVERVIEW
man/: Makefile.am  Makefile.in
src/: Makefile.in
src/client/: Makefile.am  Makefile.in  client.c  queryLog.c
src/server/: Makefile.am  Makefile.in  queryLogd.c  server.c  server.h
